# ipc-bench

./: Cargo.toml  README.md  REPORT.md  bench.sh
.github/workflows/: bench.yml
src/: lib.rs
src/transport/: mod.rs  named_pipe.rs  named_pipe_win.rs  shared_mem.rs  tcp_socket.rs  unix_socket.rs  websocket.rs
