[package]
name = "ipc-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"
tungstenite = "0.26"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
] }

[[bin]]
name = "ipc-server"
path = "src/bin/server.rs"

[[bin]]
name = "ipc-client"
path = "src/bin/client.rs"

[[bin]]
name = "shm-playground"
path = "src/bin/shm_playground.rs"
